removing overflow made a seperate branch fix for #957

--- a/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
+++ b/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
@@ -19,7 +19,6 @@
     & > div {
       padding: 0;
       height: initial;
-      overflow: initial;
     }
   }
 }
